--- a/app/restaurants/pages/restaurants/restaurants.html
+++ b/app/restaurants/pages/restaurants/restaurants.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Books</title>
+    <title>Tvoji restorani</title>
     <link
       rel="stylesheet"
       href="../../../../dist/restaurants/pages/restaurants/restaurants.css"
@@ -17,14 +17,18 @@
     <nav class="navbar">
       <ul class="nav-list">
         <li class="nav-item"><a href="../../../index.html">Home</a></li>
-        <li class="nav-item" id="login">
+        <!--<li class="nav-item" id="login">
           <a href="../../../users/pages/login/login.html">Login</a>
-        </li>
+        </li> -->
         <li class="nav-item" id="logout">
           <a href="../../../index.html">Logout</a>
         </li>
       </ul>
     </nav>
+    <div id="restaurants-title-container">
+      <h1>Tvoji restorani</h1>
+      <button id="addBtn" class="restaurant-button">Dodaj novi restoran</button>
+    </div>
     <div id="restaurants-container"></div>
   </body>
 </html>
