--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books</title>
+    <title>Gastronomy tour</title>
     <link rel="stylesheet" href="../dist/index.css">
     <script type="module" src="../dist/index.js"></script>
 </head>
