--- a/app/users/pages/login/login.html
+++ b/app/users/pages/login/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books</title>
+    <title>Gastronomy tour</title>
     <link rel="stylesheet" href="../../../../dist/users/pages/login/login.css">
     <script type="module" src="../../../../dist/users/pages/login/login.js"></script>
 </head>
@@ -22,8 +22,9 @@
             
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
+            <button type="submit" id="submit">Submit</button>
         </form>
-        <button type="submit" id="submit">Submit</button>
+        
     </div>
 </body>
 </html>
