--- a/app/tours/pages/tourForm/tourForm.html
+++ b/app/tours/pages/tourForm/tourForm.html
@@ -65,9 +65,9 @@
                 <div class="form-row">
                     <label for="keypoints">Keypoints: </label>
                     <select name="keypoints" id="keypoints">
-                        <option value="volvo">Keypoint1</option>
-                        <option value="saab">Keypoint2</option>
-                        <option value="saab">...</option>
+                        <option value="Keypoint1<">Keypoint1</option>
+                        <option value="Keypoint2<">Keypoint2</option>
+                        <option value="...">...</option>
                     </select>
                 </div>
                 
