feat: dodate stranice sa formom za dodavanje novog restorana, pregled restorana jednog vlasnika i dodate funkcionalnosti izmene i brisanja postojecih restorana.

--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,12 @@
 <body>
     <nav class="navbar">
         <ul class="nav-list">
-            <li class="nav-item"><a href="index.html">Home</a></li>
+            <li class="nav-item"><b>Home</b></li>
+            <li class="nav-item" id="restaurants"><a href="../app/restaurants/pages/restaurants/restaurants.html">Restaurants</a></li>
+            <li class="nav-item" id="tours"><a href="../app/tours/pages/tours/tours.html">Tours</a></li>
             <li class="nav-item" id="login"><a href="users/pages/login/login.html">Login</a></li>
             <li class="nav-item" id="logout"><a href="index.html">Logout</a></li>
+            
         </ul>
     </nav>
 </body>
