--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books</title>
+    <title>Home</title>
     <link rel="stylesheet" href="../dist/index.css">
     <script type="module" src="../dist/index.js"></script>
 </head>
@@ -11,6 +11,7 @@
     <nav class="navbar">
         <ul class="nav-list">
             <li class="nav-item"><a href="index.html">Home</a></li>
+            <li class="nav-item"><a href="tours/pages/userTours/userTours.html">Tours</a></li>
             <li class="nav-item" id="login"><a href="users/pages/login/login.html">Login</a></li>
             <li class="nav-item" id="logout"><a href="index.html">Logout</a></li>
         </ul>
