Dodat Feat kljucne tacke add delete pregled, dodavanje i uklanjanje iz tura, sredjeni stilovi, linkovane stranice

--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,11 @@
       <ul class="nav-list">
         <li class="nav-item"><a href="index.html">Home</a></li>
         <li class="nav-item" id="login">
-          <a href="users/pages/login/login.html">Login</a>
+          <a href="users/pages/login/login.html" class="disabled">Login</a>
         </li>
-        <li class="nav-item" id="logout"><a href="index.html">Logout</a></li>
+        <li class="nav-item" id="logout">
+          <a href="index.html" class="disabled">Logout</a>
+        </li>
       </ul>
     </nav>
   </body>
