konacan commit: omogucena funkcionalnost za brisanje i izmenu postojecih restorana odredjenog autora, dodata mogucnost dodavanja restorana samo kada si ulogovan, dodata funkcionalnost da pritiskom na dugme izmeni odlazi sena formu koja je ista kao forma za dodavanje ali sada sa formom za izmenu, ubaceni alertovi, ubaceni stilovi za navbar itd.

--- a/app/restaurants/pages/form/restaurantForm.html
+++ b/app/restaurants/pages/form/restaurantForm.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <title>Dodaj restoran</title>
-  <link rel="stylesheet" href="../../../dist/restaurants/pages/addRestaurant.css" />
+<link rel="stylesheet" href="../../../../dist/restaurants/pages/form/restaurantForm.css">
 </head>
 <body>
+
+ <nav class="navbar">
+    <ul class="nav-list">
+      <li class="nav-item"><a href="../../../index.html">Home</a></li>
+      <li class="nav-item" id="myRestaurants"><a href="../list/myRestaurant.html">Moji restorani</a></li>      <li class="nav-item" id="logout"><a href="../../../index.html">Logout</a></li>
+    </ul>
+  </nav>
+
   <h1>Dodaj novi restoran</h1>
   
   <form id="restaurantForm">
@@ -30,6 +38,6 @@
     <button type="submit">Sacuvaj</button>
   </form>
 
-  <script type="module" src="../../../dist/restaurants/pages/addRestaurant.js"></script>
+<script type="module" src="../../../../dist/restaurants/pages/form/restaurantForm.js"></script>
 </body>
 </html>
