--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <nav class="navbar">
         <ul class="nav-list">
             <li class="nav-item"><a href="index.html">Home</a></li>
+            <li class="nav-item" id="addRestaurant"><a href="restaurants/pages/form/restaurantForm.html">Dodaj restoran</a></li>
             <li class="nav-item" id="login"><a href="users/pages/login/login.html">Login</a></li>
             <li class="nav-item" id="logout"><a href="index.html">Logout</a></li>
         </ul>
