Dodate funkcionalnosti za upravljanje kljucnim tackama i objavljivanje tura. Odradjen deo stilizovanja.

--- a/app/tours/pages/userTours/userTours.html
+++ b/app/tours/pages/userTours/userTours.html
@@ -10,14 +10,14 @@
 <body>
     <nav class="navbar">
         <ul class="nav-list">
-            <li class="nav-item"><a href="../../../index.html">Home</a></li>
+            <li class="nav-item"><a href="../../../index.html"><b>GastroTrip</b></a></li>
+            <li class="nav-item" id="tours"><strong>Tours</strong></li>
             <li class="nav-item" id="logout"><a href="../../../index.html">Logout</a></li>
         </ul>
     </nav>
     <div class="button-wrapper">
         <button id="addTourBtn">Add new tour</button>
     </div>
-    
     <div class="tours-container"></div>
 </body>
 </html>
