--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <ul class="nav-list">
-            <li class="nav-item"><b>Home</b></li>
+            <li class="nav-item"><b>GastroApp</b></li>
             <li class="nav-item" id="restaurants"><a href="../app/restaurants/pages/restaurants/restaurants.html">Restaurants</a></li>
             <li class="nav-item" id="tours"><a href="../app/tours/pages/tours/tours.html">Tours</a></li>
             <li class="nav-item" id="login"><a href="users/pages/login/login.html">Login</a></li>
