--- a/app/restaurants/pages/restaurantsForm/restaurantsForm.html
+++ b/app/restaurants/pages/restaurantsForm/restaurantsForm.html
@@ -1,54 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>restaurant form page</title>
     <link rel="stylesheet" href='../../../../dist/restaurants/pages/restaurantsForm/restaurantsForm.css'>
-    
 </head>
+
 <body>
     <nav class="navbar">
         <ul class="nav-list">
-            <li class="nav-item"><a href="../../../index.html">Home</a></li>
-            <li class="nav-item" id="restaurants"><a 
-                href="../../../restaurants/pages/restaurants/restaurants.html">Restaurants</a></li>
+            <li class="nav-item"><a href="../../../index.html">GastroApp</a></li>
+            <li class="nav-item" id="restaurants"><a
+                    href="../../../restaurants/pages/restaurants/restaurants.html">Restaurants</a></li>
             <li class="nav-item" id="logout"><a href="../../../users/pages/login/login.html">Logout</a></li>
         </ul>
-        </nav>
-        <h1 id="form-title"></h1>
-        <div id="form-container">
-            <form id="form-restaurant">
-                
+    </nav>
+
+    <h1 id="form-title"></h1>
+
+    <div id="form-container">
+        <div class="step-container">
+            <div class="progress"></div>
+            <div class="step" id="1">1</div>
+            <div class="step" id="2">2</div>
+            <div class="step" id="3">3</div>
+        </div>
+        <form class="tab">
+
+            <div id="restaurant-from">
+
+                <h1 id="restaurant-headings"></h1>
+                <br>
                 <label for="name">Name:</label>
-                <input type="text" name="name" id="name" required/>
+                <input type="text" name="name" id="name" required />
+                <span class="error-message" id="name-errorMessage"></span>
                 <br>
 
                 <label for="description">Descritpion:</label>
                 <textarea name="description" id="description" rows="4" required></textarea>
-                <!-- <input type="text" name="description" id="description" required/> -->
+                <span class="error-message" id="description-errorMessage"></span>
                 <br>
 
                 <label for="capacity">Capacity:</label>
-                <input type="number" name="capacity" id="capacity" required/>
+                <input type="number" name="capacity" id="capacity" required />
+                <span class="error-message" id="capacity-errorMessage"></span>
                 <br>
 
                 <label for="imageUrl">Image URL:</label>
-                <input type="text" name="imageUrl" id="imageUrl" required/>
+                <input type="text" name="imageUrl" id="imageUrl" required />
+                <span class="error-message" id="imageUrl-errorMessage"></span>
                 <br>
 
                 <label for="latitude">Latitude:</label>
-                <input type="number" name="latitude" id="latitude" required/>
+                <input type="number" name="latitude" id="latitude" required />
+                <span class="error-message" id="latitude-errorMessage"></span>
                 <br>
 
                 <label for="longitude">Longitude:</label>
-                <input type="number" name="longitude" id="longitude" required/>
+                <input type="number" name="longitude" id="longitude" required />
+                <span class="error-message" id="longitude-errorMessage"></span>
                 <br>
+                <div class="button">
+                    <button type="button" id="cancelBtn">Cancel</button>
+                    <button type="button" id="saveBtnRestaurant" >Save &#x1F4BE</button>
+                    <button type="button" id="nextBtnRestaurant" >Next ></button>
+                </div>
+            </div>
+        </form>
+        <form class="tab">
 
-                <button type="button" id="submitBtn">Submit</button>
-            </form>
+            <div id="meals-container">
 
-        </div>
+                <div id="meal-input-section">
+
+                    <div id="meals-table-container">
+                        <table id="meals">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Price</th>
+                                    <th>Ingredients</th>
+                                    <th>Image URL</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+                        </table>
+                        <br>
+                        <div id="addBtn-container">
+                            <button type="button" id="addBtn">+</button>
+                        </div>
+                        <div id="meal-navigationBtn">
+                            <button type="button" id="backBtn">Back</button>
+                            <button type="button" id="nextBtnMeal">Next ></button>
+                        </div>
+
+                    </div>
+
+                    <div id="meal-form-container">
+                        <h1>Add new resturant meal</h1>
+
+                        <label for="meal-name">Name</label>
+                        <input type="text" name="meal-name" id="meal-name" required />
+                        <span class="error-message" id="meal-name-errorMessage"></span>
+                        <br>
+
+                        <label for="price">Price</label>
+                        <input type="number" name="price" id="price" required />
+                         <span class="error-message" id="name-errorMessage"></span>
+                        <br>
+
+                        <label for="ingredients">Ingredients</label>
+                        <textarea type="text" name="ingredients" id="ingredients"></textarea>
+                        <br>
+
+                        <label for="meal-imageUrl">Image URL:</label>
+                        <input type="text" name="meal-imageUrl" id="meal-imageUrl" />
+                        <br>
+                        <div class="button" id="meal-saveBtn">
+                            <button type="button" id="saveBtnMeal" >+ Meal</button>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </form>
+        <form class="tab">
+            <div id="publish-container">
+                <div id="restaurant-card">
+
+                </div>
+
+                <div id="meal-table">
+                    <table>
+                        <tr>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </table>
+
+                </div>
+
+                <div id="availability-result">
+                    <span> restaurant have one interior picture</span>
+                    <span> restaurant have at least five meals</span>
+                </div>
+
+                <div class="button">
+                    <button type="button" id="publishBtn">Publish</button>
+                </div>
+
+            </div>
+
+
+        </form>
+    </div>
+
     <script type="module" src="../../../../dist/restaurants/pages/restaurantsForm/restaurantsForm.js"></script>
+
 </body>
+
 </html>
