--- a/app/tours/pages/guide-tours/guide-tours.html
+++ b/app/tours/pages/guide-tours/guide-tours.html
@@ -18,7 +18,7 @@
         </nav>
         <div class="container">
             <h1>My Tours</h1>
-
+            <button id="createTourBtn">+ Add New Tour</button>
             <div id="toursList" class="tour-list"></div>
         </div>
         
