Edit i delete dugme-greska

--- a/app/tours/pages/guide-tours/guide-tours.html
+++ b/app/tours/pages/guide-tours/guide-tours.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Tours</title>
         <link rel="stylesheet" href="../../../../dist/tours/pages/guide-tours/guide-tours.css">
-        <script type="module" src="/dist/tours/pages/guide-tours/guide-tours.js"></script>
+        <!-- <script type="module" src="../../../../dist/tours/pages/guide-tours/guide-tours.js"></script> -->
     </head>
     <body>
 
@@ -21,7 +21,7 @@
             <button id="createTourBtn">+ Add New Tour</button>
             <div id="toursList" class="tour-list"></div>
         </div>
-        
+        <script type="module" src="../../../../dist/tours/pages/guide-tours/guide-tours.js"></script>
     </body>
 </html>
 
