zavrsena validacija na formi restorana stanje pre refaktorisanja.

--- a/app/restaurants/pages/restaurants/restaurants.html
+++ b/app/restaurants/pages/restaurants/restaurants.html
@@ -15,6 +15,7 @@
             <li class="nav-item"><a href="../../../index.html">Home</a></li>
             <li class="nav-item" id="restaurants"><b>Restaurants</b></li>
             <li class="nav-item" id="logout"><a href="../../../users/pages/login/login.html">Logout</a></li>
+            <li class="nav-item" id="user"></li>
         </ul>
     </nav>
     <h1 id="restaurantMainPage-title"></h1>
