--- a/app/restaurants/pages/restaurantsForm/restaurantsForm.html
+++ b/app/restaurants/pages/restaurantsForm/restaurantsForm.html
@@ -50,8 +50,8 @@
                 <br>
 
                 <label for="restaurnatImageUrl">Image URL:</label>
-                <input type="text" name="restaurnatImageUrl" id="restaurnatImageUrl" required />
-                <span class="error-message" id="imageUrl-errorMessage"></span>
+                <input type="text" name="restaurantImageUrl" id="restaurantImageUrl" required />
+                <span class="error-message" id="restaurantImageUrl-errorMessage"></span>
                 <br>
 
                 <label for="latitude">Latitude:</label>
@@ -83,12 +83,12 @@
 
                     <label for="price">Price</label>
                     <input type="number" name="price" id="price" required />
-                    <span class="error-message" id="name-errorMessage"></span>
+                    <span class="error-message" id="price-errorMessage"></span>
 
 
                     <label for="ingredients">Ingredients</label>
                     <textarea name="ingredients" id="ingredients"></textarea>
-
+                    <span class="error-message" id="ingredients-errorMessage"></span>
 
                     <label for="meal-imageUrl">Image URL:</label>
                     <input type="text" name="meal-imageUrl" id="meal-imageUrl" />
