--- a/app/tours/pages/touristTourDetails/touristTourDetails.html
+++ b/app/tours/pages/touristTourDetails/touristTourDetails.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar">
       <ul class="nav-list">
-        <li class="nav-item"><a href="../../../index.html">Home</a></li>
+        <li class="nav-item"><a href="../../../index.html"><b>GastroTrip</b></a></li>
         <li class="nav-item">
           <a href="../touristTours/touristTours.html">Tours</a>
         </li>
@@ -35,6 +35,7 @@
         <div class="tour-header">
           <div class="startTime-maxGuests"></div>
         </div>
+        <hr>
         <div class="tour-description"></div>
       </div>
       <div class="keypoint-details"></div>
