--- a/app/tours/pages/touristTours/touristTours.html
+++ b/app/tours/pages/touristTours/touristTours.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar">
       <ul class="nav-list">
-        <li class="nav-item"><a href="../../../index.html">Home</a></li>
+        <li class="nav-item"><a href="../../../index.html"><b>GastroTrip</b></a></li>
         <li class="nav-item">
           <a><strong>Tours</strong></a>
         </li>
