--- a/app/restaurants/pages/restaurants/restaurants.html
+++ b/app/restaurants/pages/restaurants/restaurants.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <ul class="nav-list">
-            <li class="nav-item"><a href="../../../index.html">Home</a></li>
+            <li class="nav-item"><a href="../../../index.html">GastroTrip</a></li>
             <li class="nav-item" id="restaurants"><b>Restaurants</b></li>
             <li class="nav-item" id="logout"><a href="../../../users/pages/login/login.html">Logout</a></li>
             <li class="nav-item" id="user"></li>
