--- a/app/restaurants/pages/restaurantsForm/restaurantsForm.html
+++ b/app/restaurants/pages/restaurantsForm/restaurantsForm.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <ul class="nav-list">
-            <li class="nav-item"><a href="../../../index.html"><strong>GastroApp</strong></a></li>
+            <li class="nav-item"><a href="../../../index.html"><b>GastroTrip</b></a></li>
             <li class="nav-item" id="restaurants"><a
                     href="../../../restaurants/pages/restaurants/restaurants.html">Restaurants</a></li>
             <li class="nav-item" id="logout"><a href="../../../users/pages/login/login.html">Logout</a></li>
@@ -109,23 +109,23 @@
                                     <th>Price</th>
                                     <th>Ingredients</th>
                                     <th>Image URL</th>
-                                    <th></i></th>
+                                    <th></th>
                                 </tr>
                             </thead>
-                            <tbody >
+                            <tbody>
 
                             </tbody>
                         </table>
-                        </div>
+                    </div>
                     <br>
-            <div id="meal-tableBtn">
-                <button type="button" id="backBtn">Back</button>
-                <button type="button" id="nextBtnMeal">Next ></button>
-            </div>
+                    <div id="meal-tableBtn">
+                        <button type="button" id="backBtn">Back</button>
+                        <button type="button" id="nextBtnMeal">Next ></button>
+                    </div>
                 </div>
             </div>
 
-            
+
         </form>
         <form class="tab">
             <div id="publish-container">
@@ -134,20 +134,15 @@
                 </div>
 
                 <div id="meal-table">
-                    <table>
+                    <table id="publish-meals-table">
                         <tr>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
+                            <th>Name</th>
+                            <th>Price</th>
+                            <th>Ingredients</th>
+                            <th>Image URL</th>
                         </tr>
                     </table>
 
-                </div>
-
-                <div id="availability-result">
-                    <span> restaurant have one interior picture</span>
-                    <span> restaurant have at least five meals</span>
                 </div>
 
                 <div class="button">
