odradjena delimicna stilizacija stranice restorana

--- a/app/restaurants/pages/restaurants/restaurants.html
+++ b/app/restaurants/pages/restaurants/restaurants.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant home</title>
     <link rel="stylesheet" href="../../../../dist/restaurants/pages/restaurants/restaurants.css">
+    <script src="https://kit.fontawesome.com/b89b4860cf.js" crossorigin="anonymous"></script>
     <script type="module" src="../../../../dist/restaurants/pages/restaurants/restaurants.js"></script>
 </head>
 
@@ -19,7 +20,10 @@
         </ul>
     </nav>
     <h1 id="restaurantMainPage-title"></h1>
-    <button class="button" id="addBtn">Add Restaurant</button>
+    <div id="addBtn-container">
+        <button class="button" id="addBtn">Add Restaurant</button>
+    </div>
+    
     <div class="restaurant-container">
 
     </div>
