--- a/app/restaurants/pages/restaurantsForm/restaurantsForm.html
+++ b/app/restaurants/pages/restaurantsForm/restaurantsForm.html
@@ -64,8 +64,9 @@
                 <span class="error-message" id="longitude-errorMessage"></span>
                 <br>
                 <div class="button">
-                    <button type="button" id="saveBtnRestaurant">Save &#x1F4BE</button>
+                    <button type="button" id="saveBtnRestaurant">Save <i class="fa-regular fa-floppy-disk"></i></button>
                     <button type="button" id="nextBtnRestaurant">Next ></button>
+                    <span class="tooltiptext">All fields are required</span>
                 </div>
             </div>
         </form>
