--- a/app/restaurants/pages/restaurants/restaurants.html
+++ b/app/restaurants/pages/restaurants/restaurants.html
@@ -13,8 +13,8 @@
 <body>
     <nav class="navbar">
         <ul class="nav-list">
-            <li class="nav-item"><a href="../../../index.html">GastroTrip</a></li>
-            <li class="nav-item" id="restaurants"><b>Restaurants</b></li>
+            <li class="nav-item"><a href="../../../index.html"><b>GastroTrip</b></a></li>
+            <li class="nav-item" id="restaurants"><h4>Restaurants</h4></li>
             <li class="nav-item" id="logout"><a href="../../../users/pages/login/login.html">Logout</a></li>
             <li class="nav-item" id="user"></li>
         </ul>
