Implementirana forma za dodavanje, izmenu i objavu restorana sa validacijama i status prikazom

--- a/app/restaurants/pages/list/myRestaurant.html
+++ b/app/restaurants/pages/list/myRestaurant.html
@@ -18,19 +18,7 @@
 
   <h1>Moji restorani</h1>
   
-  <table>
-    <thead>
-      <tr>
-        <th>Naziv</th>
-        <th>Opis</th>
-        <th>Kapacitet</th>
-        <th>Akcije</th>
-      </tr>
-    </thead>
-    <tbody id="restaurantsBody">
-
-    </tbody>
-  </table>
+  <div id="restaurantsContainer" class="card-container"></div>
 
   <!-- Ukljuci JS kada budes prelazio na dinamicki prikaz -->
 <script type="module" src="../../../../dist/restaurants/pages/list/myRestaurant.js"></script>
