--- a/app/restaurants/pages/form/restaurantForm.html
+++ b/app/restaurants/pages/form/restaurantForm.html
@@ -18,25 +18,41 @@
   
   <form id="restaurantForm">
     <label>Naziv:</label>
-    <input type="text" id="name" required />
+    <input type="text" id="name" required/>
 
     <label>Opis:</label>
     <textarea id="description" required></textarea>
 
     <label>Kapacitet:</label>
-    <input type="number" id="capacity" required />
+    <input type="number" id="capacity" required  min="1"/>
 
     <label>Slike (URL, odvojene zarezom):</label>
     <input type="text" id="images" />
 
     <label>Geografska sirina:</label>
-    <input type="number" step="any" id="latitude" required />
+    <input type="number" step="any" id="latitude" required  step="any" />
 
     <label>Geografska duzina:</label>
-    <input type="number" step="any" id="longitude" required />
+    <input type="number" step="any" id="longitude" required  step="any" />
 
     <button type="submit">Sacuvaj</button>
+    <button type="button" id="publishBtn">Objavi restoran</button>
+
   </form>
+
+  <h2>Jelovnik</h2>
+<div id="mealsList"></div>
+<button id="addMealBtn">+ Dodaj jelo</button>
+
+<!-- Forma za dodavanje jela -->
+<div id="mealFormContainer" style="display:none;">
+  <input type="text" id="mealName" placeholder="Naziv jela" />
+  <input type="number" id="mealPrice" placeholder="Cena" />
+  <input type="text" id="mealIngredients" placeholder="Sastojci" />
+  <input type="text" id="mealImageUrl" placeholder="URL slike (opciono)" />
+  <button id="saveMealBtn">Sacuvaj jelo</button>
+</div>
+
 
 <script type="module" src="../../../../dist/restaurants/pages/form/restaurantForm.js"></script>
 </body>
