Kreiranje rezervacije ture

--- a/app/tours/pages/touristTourDetails/touristTourDetails.html
+++ b/app/tours/pages/touristTourDetails/touristTourDetails.html
@@ -20,7 +20,9 @@
   <body>
     <nav class="navbar">
       <ul class="nav-list">
-        <li class="nav-item"><a href="../../../index.html"><b>GastroTrip</b></a></li>
+        <li class="nav-item">
+          <a href="../../../index.html"><b>GastroTrip</b></a>
+        </li>
         <li class="nav-item">
           <a href="../touristTours/touristTours.html">Tours</a>
         </li>
@@ -29,16 +31,32 @@
         </li>
       </ul>
     </nav>
-
+    <div class="resultMessage"></div>
     <div class="container">
       <div class="tour-details">
         <div class="tour-header">
           <div class="startTime-maxGuests"></div>
         </div>
-        <hr>
+        <hr />
         <div class="tour-description"></div>
+        <div class="button-wrapper">
+          <button type="button" id="bookBtn">Book Now</button>
+        </div>
       </div>
       <div class="keypoint-details"></div>
+    </div>
+
+    <div id="bookingModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Book this tour</h2>
+        <form id="bookingForm">
+          <label for="guests">Number of guests:</label>
+          <input type="number" id="guests" name="guests" min="1" required />
+          <span class="hidden" id="guestsInputError">This field is required</span>
+          <button type="button" id="bookTourBtn" disabled>Confirm Booking</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
