feat: B2 zadatak - prikaz objavljenih restorana sa paginacijom, sortiranjem i detaljima

--- a/app/restaurants/pages/form/restaurantForm.html
+++ b/app/restaurants/pages/form/restaurantForm.html
@@ -8,6 +8,9 @@
 <body>
 
  <nav class="navbar">
+  <div class="logo">
+        <a href="../../../index.html">Gastronomija</a>
+        </div>
     <ul class="nav-list">
       <li class="nav-item"><a href="../../../index.html">Home</a></li>
       <li class="nav-item" id="myRestaurants"><a href="../list/myRestaurant.html">Moji restorani</a></li>      <li class="nav-item" id="logout"><a href="../../../index.html">Logout</a></li>
@@ -44,7 +47,7 @@
 <div id="mealsList"></div>
 <button id="addMealBtn">+ Dodaj jelo</button>
 
-<!-- Forma za dodavanje jela -->
+<!-- forma za dodavanje jela -->
 <div id="mealFormContainer" style="display:none;">
   <input type="text" id="mealName" placeholder="Naziv jela" />
   <input type="number" id="mealPrice" placeholder="Cena" />
