--- a/app/index.html
+++ b/app/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books</title>
+    <title>Home</title>
     <link rel="stylesheet" href="../dist/index.css">
     <script type="module" src="../dist/index.js"></script>
 </head>
 <body>
     <nav class="navbar">
+        <div class="logo">
+        <a href="index.html">Gastronomija</a>
+        </div>
         <ul class="nav-list">
             <li class="nav-item"><a href="index.html">Home</a></li>
-            <li class="nav-item" id="addRestaurant"><a href="restaurants/pages/form/restaurantForm.html">Dodaj restoran</a></li>
             <li class="nav-item" id="login"><a href="users/pages/login/login.html">Login</a></li>
             <li class="nav-item" id="logout"><a href="index.html">Logout</a></li>
+            <li class="nav-item" id="logout"><a href="restaurants/pages/restaurantList/restaurantList.html">Restorani</a>
+</li>
+
         </ul>
     </nav>
 </body>
