feat: dodate stranice pregleda restorana od strane turiste

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
             <li class="nav-item" id="restaurants"><a href="../app/restaurants/pages/restaurants/restaurants.html">Restaurants</a></li>
             <li class="nav-item" id="tours"><a href="tours/pages/userTours/userTours.html">Tours</a></li>
             <li class="nav-item" id="tourist-tours"><a href="tours/pages/touristTours/touristTours.html">Tours</a></li>
+            <li class="nav-item" id="tourist-restaurants"><a href="/app/restaurants/pages/touristRestaurantsOverview/touristRestaurantsOverview.html">Restaurants</a></li>
             <li class="nav-item" id="login"><a href="users/pages/login/login.html">Login</a></li>
             <li class="nav-item" id="logout"><a href="index.html">Logout</a></li>
 
