--- a/app/tours/pages/touristTours/touristTours.html
+++ b/app/tours/pages/touristTours/touristTours.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
           <a><strong>Tours</strong></a>
         </li>
+        <li class="nav-item" id="tourist-restaurants">
+          <a href="../../../restaurants/pages/touristRestaurantsOverview/touristRestaurantsOverview.html">Restaurants</a>
+        </li>
         <li class="nav-item" id="logout">
           <a href="../../../index.html">Logout</a>
         </li>
