Dopunjen scss dokument sa kodom za stilizovanje drugog koraka forme

--- a/app/tours/pages/create/create.html
+++ b/app/tours/pages/create/create.html
@@ -33,34 +33,44 @@
                 <input type="number" id="maxGuests" name="maxGuests" placeholder="Max number of tourists" min="1" />
                 <span id="maxGuestsError" class="error-message"></span>
 
-                <button type="submit" id="submitBtn">Save draft</button>
-                <button id="nextBtn" type="button">Next</button>
+                
+                <div class="button-group">
+                    <button type="submit" id="submitBtn">Save draft</button>
+                    <button id="nextBtn" type="button">Next</button>
+                </div>
             </form>
         </div>
         <div id="step-keypoints" style="display: none">
-            <h2>Step 2: Add key-points</h2>
-
-            <ul id="keypoint-list"></ul>
-
-            <form id="keypoint-form">
-                <input type="text" id="keypoint-title" placeholder="Key-point name" required>
-                <textarea id="keypoint-description" placeholder="Key-point description" required></textarea>
-                <input type="text" id="keypoint-image" placeholder="Image URL" required>
-                <input type="number" id="keypoint-lat" placeholder="Latitude" required>
-                <input type="number" id="keypoint-lng" placeholder="Longitude" required>
-                <button type="submit">Add key-point</button>
-            </form>
+    <div class="wrapper">
+        <div id="sideView">
+        <form id="keypoint-form">
+            <h3>Add key-point</h3>
 
             <p id="keypoint-warning" style="color: red; display: none;">
-                You must add at least 2 key-points to continue!
+            You must add at least 2 key-points to continue!
             </p>
 
-            <div class="buttons">
-                <button id="prev-button">Previous</button>
-                <button id="next-button" disabled>Next</button>
-            </div>
+            <input type="text" id="keypoint-title" placeholder="Key-point name" required>
+            <textarea id="keypoint-description" placeholder="Key-point description" required></textarea>
+            <input type="text" id="keypoint-image" placeholder="Image URL" required>
+            <input type="number" id="keypoint-lat" placeholder="Latitude" required>
+            <input type="number" id="keypoint-lng" placeholder="Longitude" required>
+
+            <button type="submit">Add key-point</button>
+        </form>
         </div>
 
+        <div id="createdKP">
+            <h3>Created key-points</h3>
+            <ul id="keypoint-list"></ul>
+        </div>
+    </div>
+
+    <div class="button-group">
+        <button id="prev-button">Previous</button>
+        <button id="next-button" disabled>Next</button>
+    </div>
+    </div>
         <script type="module" src="/dist/tours/pages/create/create.js"></script>
     </body>
 </html>
