Odradjena stilizacija i opcije za korisnika u gornjem desnom uglu (Bolji UI/UX).

--- a/app/tours/pages/touristTourDetails/touristTourDetails.html
+++ b/app/tours/pages/touristTourDetails/touristTourDetails.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Tour</title>
+    <title>GastroTrip - Tours</title>
     <link
       rel="stylesheet"
       href="../../../../dist/tours/pages/touristTourDetails/touristTourDetails.css"
@@ -26,8 +26,15 @@
         <li class="nav-item">
           <a href="../touristTours/touristTours.html">Tours</a>
         </li>
-        <li class="nav-item" id="logout">
-          <a href="../../../index.html">Logout</a>
+        <li class="nav-item" id="user">
+          <p class="username"></p>
+          <div class="user-menu">
+            <div class="avatar"><i class="fa-regular fa-circle-user" id="avatarBtn"></i></div>
+            <div class="dropdown" id="dropdownMenu">
+              <a href="../TouristTourReservations/touristTourReservations.html"><i class="fa-solid fa-book"></i> &nbsp;My Reservations</a>
+              <a href="../../../index.html" id="logoutBtn"><i class="fa-solid fa-arrow-right-from-bracket"></i> &nbsp;Logout</a>
+            </div>
+          </div>
         </li>
       </ul>
     </nav>
