--- a/app/users/pages/login/login.html
+++ b/app/users/pages/login/login.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <ul class="nav-list">
-            <li class="nav-item"><a href="../../../index.html">Home</a></li>
+            <li class="nav-item"><a href="../../../index.html"><b>GastroTrip</b></a></li>
             <li class="nav-item" id="restaurants"><a href="../../../restaurants/pages/restaurants/restaurants.html"><h5>Restaurants</h5></a></li>
             <li class="nav-item" id="login"><a href="login.html">Login</a></li>
             <li class="nav-item" id="logout"><a href="../../../index.html">Logout</a></li>
