--- a/app/index.html
+++ b/app/index.html
@@ -6,16 +6,26 @@
     <title>Home</title>
     <link rel="stylesheet" href="../dist/index.css">
     <script type="module" src="../dist/index.js"></script>
+    <script src="https://kit.fontawesome.com/5f9b15613a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar">
         <ul class="nav-list">
-            <li class="nav-item"><b>GastroTrip</b></li>
+            <li class="nav-item"><a href="index.html"><b>GastroTrip</b></a></li>
             <li class="nav-item" id="restaurants"><a href="../app/restaurants/pages/restaurants/restaurants.html">Restaurants</a></li>
             <li class="nav-item" id="tours"><a href="tours/pages/userTours/userTours.html">Tours</a></li>
             <li class="nav-item" id="tourist-tours"><a href="tours/pages/touristTours/touristTours.html">Tours</a></li>
             <li class="nav-item" id="login"><a href="users/pages/login/login.html">Login</a></li>
-            <li class="nav-item" id="logout"><a href="index.html">Logout</a></li>
+            <li class="nav-item" id="user">
+                <p class="username"></p>
+                <div class="user-menu">
+                    <div class="avatar"><i class="fa-regular fa-circle-user" id="avatarBtn"></i></div>
+                        <div class="dropdown" id="dropdownMenu">
+                        <a href="/app/tours/pages/TouristTourReservations/touristTourReservations.html" id="myReservations">My Reservations</a>
+                        <a href="index.html" id="logoutBtn">Logout &nbsp;<i class="fa-solid fa-arrow-right-from-bracket"></i></a>
+                    </div>
+                </div>
+            </li>
 
         </ul>
     </nav>
