--- a/app/tours/pages/toursForm/toursForm.html
+++ b/app/tours/pages/toursForm/toursForm.html
@@ -21,8 +21,14 @@
     <nav class="navbar">
       <ul class="nav-list">
         <li class="nav-item"><a href="../../../index.html"><b>GastroTrip</b></a></li>
-        <li class="nav-item" id="logout">
-          <a href="../../../index.html">Logout</a>
+        <li class="nav-item" id="user">
+          <p class="username"></p>
+          <div class="user-menu">
+            <div class="avatar"><i class="fa-regular fa-circle-user" id="avatarBtn"></i></div>
+              <div class="dropdown" id="dropdownMenu">
+              <a href="../../../index.html" id="logoutBtn"><i class="fa-solid fa-arrow-right-from-bracket"></i> &nbsp;Logout</a>
+            </div>
+          </div>
         </li>
       </ul>
     </nav>
