--- a/app/tours/pages/userTours/userTours.html
+++ b/app/tours/pages/userTours/userTours.html
@@ -6,13 +6,22 @@
     <title>Tours</title>
     <link rel="stylesheet" href="/dist/tours/pages/userTours/userTours.css">
     <script type="module" src="/dist/tours/pages/userTours/userTours.js"></script>
+    <script src="https://kit.fontawesome.com/5f9b15613a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar">
         <ul class="nav-list">
             <li class="nav-item"><a href="../../../index.html"><b>GastroTrip</b></a></li>
             <li class="nav-item" id="tours"><strong>Tours</strong></li>
-            <li class="nav-item" id="logout"><a href="../../../index.html">Logout</a></li>
+            <li class="nav-item" id="user">
+                <p class="username"></p>
+                <div class="user-menu">
+                    <div class="avatar"><i class="fa-regular fa-circle-user" id="avatarBtn"></i></div>
+                        <div class="dropdown" id="dropdownMenu">
+                        <a href="../../../index.html" id="logoutBtn"><i class="fa-solid fa-arrow-right-from-bracket"></i> &nbsp;Logout</a>
+                    </div>
+                </div>
+            </li>
         </ul>
     </nav>
     <div class="button-wrapper">
