--- a/app/tours/pages/create/create.html
+++ b/app/tours/pages/create/create.html
@@ -16,6 +16,10 @@
         </nav>
         <div id="step1"> 
             <form id="newTourForm" novalidate>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 33%"></div> 
+                </div>
+
                 <h3>Add New Tour</h3>
                 <label for="name">Tour name:</label>
                 <input type="text" id="name" name="name" placeholder="Tour name" required />
@@ -40,37 +44,52 @@
                 </div>
             </form>
         </div>
-        <div id="step-keypoints" style="display: none">
-    <div class="wrapper">
-        <div id="sideView">
-        <form id="keypoint-form">
-            <h3>Add key-point</h3>
+        <div id="step2" style="display: none">
+            <div class="progress-bar">
+                <div class="progress" style="width: 66%"></div> 
+            </div>
+            <div class="wrapper">
+                <form id="keypoint-form">
+                    <h3>Add key-point</h3>
 
-            <p id="keypoint-warning" style="color: red; display: none;">
-            You must add at least 2 key-points to continue!
-            </p>
+                    <p id="keypoint-warning" style="color: red; display: none;">
+                        You must add at least 2 key-points to continue!
+                    </p>
 
-            <input type="text" id="keypoint-title" placeholder="Key-point name" required>
-            <textarea id="keypoint-description" placeholder="Key-point description" required></textarea>
-            <input type="text" id="keypoint-image" placeholder="Image URL" required>
-            <input type="number" id="keypoint-lat" placeholder="Latitude" required>
-            <input type="number" id="keypoint-lng" placeholder="Longitude" required>
+                    <input type="text" id="keypoint-title" placeholder="Key-point name" required>
+                    <textarea id="keypoint-description" placeholder="Key-point description" required></textarea>
+                    <input type="text" id="keypoint-image" placeholder="Image URL" required>
+                    <input type="number" id="keypoint-lat" placeholder="Latitude" required>
+                    <input type="number" id="keypoint-lng" placeholder="Longitude" required>
 
-            <button type="submit">Add key-point</button>
-        </form>
+                    <button type="submit">Add key-point</button>
+                </form>
+
+                <div id="createdKP">
+                    <h3>Created key-points</h3>
+                    <ul id="keypoint-list" class="accordion-list"></ul>
+                </div>
+            </div>
+
+            <div class="button-group">
+                <button id="prevToStep1">Previous</button>
+                <button id="toPreview" disabled>Next</button>
+            </div>
         </div>
 
-        <div id="createdKP">
-            <h3>Created key-points</h3>
-            <ul id="keypoint-list"></ul>
+        <div id="step3" style="display: none;">
+            <div class="wrapper">
+                <div class="progress-bar">
+                    <div class="progress" style="width: 100%"></div> 
+                </div>
+                <h3>Preview tour</h3>
+                <div id="previewContainer"></div>
+                <div class="button-group">
+                    <button id="prevToStep2">Previous</button>
+                    <button id="submitAll">Publish</button>
+                </div>
+            </div>
         </div>
-    </div>
-
-    <div class="button-group">
-        <button id="prev-button">Previous</button>
-        <button id="next-button" disabled>Next</button>
-    </div>
-    </div>
         <script type="module" src="/dist/tours/pages/create/create.js"></script>
     </body>
 </html>
