Dopunjen servis sa metodom za dobavljanje svih tura i filtriranje, napravljen ts doc sa pocetnom funkcijom za filtriranje, prepravljen html i scss

--- a/app/tours/pages/user/user.html
+++ b/app/tours/pages/user/user.html
@@ -34,7 +34,7 @@
             </select>
         </aside>
 
-      <section class="content">
+    <section class="content">
         <div class="top-bar">
             <label for="pageSize">Tours per page:</label>
             <select id="pageSize">
@@ -45,20 +45,12 @@
         </div>
 
         <div class="card-grid">
-            <div class="tour-card">
-                <img src="stockholm.jpg" alt="Stockholm" />
-                <div class="info">
-                    <h4>Stockholm</h4>
-                    <p>$222</p>
-                </div>
-                <button class="card-btn">≡</button>
-            </div>
             <div class="pagination"> 
                 <button id="prevPage" disabled>Prethodna</button>
                 <button id="nextPage">Sledeca</button>
             </div>
         </div>
-      </section>
+    </section>
     </main>
 
     <footer class="footer">
@@ -75,5 +67,6 @@
             <p>Blog, Support, etc.</p>
         </div>
     </footer>
+    <script  type="module" src="/dist/tours/pages/user/user.js"></script>
   </body>
 </html>
