--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
             <li class="nav-item"><a href="index.html">Home</a></li>
             <li class="nav-item" id="login"><a href="users/pages/login/login.html">Login</a></li>
             <li class="nav-item" id="logout"><a href="index.html">Logout</a></li>
-            <li class="nav-item" id="logout"><a href="restaurants/pages/restaurantList/restaurantList.html">Restorani</a>
+            <li class="nav-item" id="restorani"><a href="restaurants/pages/restaurantList/restaurantList.html">Restorani</a>
 </li>
 
         </ul>
