--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books</title>
-    <link rel="stylesheet" href="../dist/index.css">
-    <script type="module" src="../dist/index.js"></script>
+    <link rel="stylesheet" href="index.scss">
+    <script type="module" src="index.ts"></script>
 </head>
 <body>
     <nav class="navbar">
