--- a/app/users/pages/login/login.html
+++ b/app/users/pages/login/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books</title>
-    <link rel="stylesheet" href="../../../../dist/users/pages/login/login.css">
-    <script type="module" src="../../../../dist/users/pages/login/login.js"></script>
+    <link rel="stylesheet" href="login.scss">
+    <script type="module" src="login.ts"></script>
 </head>
 <body>
     <nav class="navbar">
